<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_header">About</string>
    <string name="about_text">&lt;b>Version 1.0&lt;/b> &lt;br>&lt;br>Thank you for downloading our app&lt;br>&lt;br> &lt;i>By MyCompany&amp;#174;&lt;/i></string>
    <string name="action_download">Download</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_success">You have been signed out</string>
    <string name="admob_banner_id" />
    <string name="admob_interstitial_id" />
    <string name="already_loading">We are already loading some new content!</string>
    <string name="app_name">Universal</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_notification">Background media playback</string>
    <string name="av_app_name">Audio Visualization</string>
    <string name="background_audio">Playing audio</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_audio">Play audio</string>
    <string name="btn_video">Play video</string>
    <string name="cancel">Cancel</string>
    <string name="cart_empty_subtitle">Start shopping to fill your cart with items</string>
    <string name="cart_empty_title">Your cart is empty</string>
    <string name="cart_failed">We were unable to checkout your items..</string>
    <string name="cart_success">Added to cart</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkout">Checkout</string>
    <string name="comments">Comments</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="define_introduction" />
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="dialog_connection_description">"We can not connect with our APIs.

Please ensure that you have set up your API keys and parameters as documented!"</string>
    <string name="dialog_connection_title">Servers unreachable</string>
    <string name="dialog_internet_description">"You seem to have no internet connection, this app requires internet to get the latest content.

You can continue to see your favorite/offline items!"</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_purchase">"In order to view this content, you need to unlock the full version by making a one time purchase.

This will also remove advertisements throughout the app."</string>
    <string name="dialog_purchase_title">Content locked.</string>
    <string name="dimensions">Dimensions</string>
    <string name="download_failed">Download failed</string>
    <string name="download_open_failed">No app to handle file</string>
    <string name="download_permission_explaination">"In order to download files, you need to grant us permission to your storage.

After granting us access, you may go ahead and download the file."</string>
    <string name="download_permission_grant">Grant permission</string>
    <string name="download_unavailable">You can not download this content</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_open">Menu opened</string>
    <string name="duration">%1$d:%2$02d</string>
    <string name="edit">Edit</string>
    <string name="empty_textview">Error loading data</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_credentials">Your email or password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_retry">Failed to connect to stream...</string>
    <string name="error_retry_later">Please try again in a few seconds...</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="facebook_access_token">EAAG0LccEx7oBALltV3L2ZAKzxAX6CAIVZAaggXTWFPvFxyihtLPK55UlZB4eIvnO0lb5icL7DBnlJKoQiYX3MPmmL4vui3YLZB6OlMuM24G7aPQXRCObwjBcLtBPTJaQpZClU6uBNIaBk67mq0TFrRHZCntZCt9qGV9o2Hti7ADl3loZCeJxnKEK198fEWE7aq0ZD</string>
    <string name="favorite_button">Favorite</string>
    <string name="favorite_duplicate">This item has already been added</string>
    <string name="favorite_menu_delete">Delete</string>
    <string name="favorite_success">The item has been added</string>
    <string name="favorites">Favorites</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="featured">Featured</string>
    <string name="feed_description_value">Feed link</string>
    <string name="feed_link_value">Feed description</string>
    <string name="feed_title_value">Feed title</string>
    <string name="filter">Filter</string>
    <string name="flickr_key">c1f63725521d955d0ceed11a7430f0b8</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="google_android_key">AIzaSyAwa4e9O3Cq2kUlNZLYMJsBeVVO9AxO2Ls</string>
    <string name="google_play_license" />
    <string name="image_descr">Image</string>
    <string name="max_price">Maximum price</string>
    <string name="min_price">Minimum price</string>
    <string name="now_playing">Now playing</string>
    <string name="ok">Ok</string>
    <string name="open_button">Open</string>
    <string name="order_success">Thank you for your order!</string>
    <string name="order_success_subtitle">We have received your order!</string>
    <string name="play_button">Play</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="radio_playing_other">Already playing another station. Press play again to play this station instead.</string>
    <string name="sale">Sale</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="settings_aboutus">About</string>
    <string name="settings_aboutus_summary">Information about our application</string>
    <string name="settings_billing">In-App Products.</string>
    <string name="settings_billing_summary">Manage your In-App purchases</string>
    <string name="settings_fontsize">Text size</string>
    <string name="settings_fontsize_summary">Preferred text size for articles and posts</string>
    <string name="settings_general">General</string>
    <string name="settings_general_summary">Username and password information</string>
    <string name="settings_licenses">Open-source licenses</string>
    <string name="settings_licenses_summary">Licence details for open-source software</string>
    <string name="settings_other">Other</string>
    <string name="settings_other_summary">Other information</string>
    <string name="settings_purchase">Unlock extra features</string>
    <string name="settings_purchase_summary">Removes ads and unlocks more content</string>
    <string name="settings_rate">Rate this app</string>
    <string name="settings_rate_summary">Help other users enjoy this application</string>
    <string name="settings_showmenu">Show side menu on start</string>
    <string name="settings_showmenu_summary">Yes/No</string>
    <string name="share">Share</string>
    <string name="textview_date">"Date: "</string>
</resources>