<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/currency_min_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="$" />
        <EditText android:id="@id/min_price" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/min_price" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_m">
        <TextView android:id="@id/currency_max_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="$" />
        <EditText android:id="@id/max_price" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/max_price" android:inputType="number" />
    </LinearLayout>
    <CheckBox android:id="@id/checkbox_sale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_m" android:text="@string/sale" />
    <CheckBox android:id="@id/checkbox_featured" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/featured" />
</LinearLayout>