<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/image" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/placeholder" android:scaleType="centerInside" android:contentDescription="@string/image_descr" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnShare" android:background="@drawable/tumblr_button_background" android:paddingLeft="10.0dip" android:paddingTop="@dimen/spacing_xxs" android:paddingRight="10.0dip" android:paddingBottom="@dimen/spacing_xxs" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/share" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnSet" android:background="@drawable/tumblr_button_background" android:paddingLeft="10.0dip" android:paddingTop="@dimen/spacing_xxs" android:paddingRight="10.0dip" android:paddingBottom="@dimen/spacing_xxs" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/set" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnSave" android:background="@drawable/tumblr_button_background" android:paddingLeft="10.0dip" android:paddingTop="@dimen/spacing_xxs" android:paddingRight="10.0dip" android:paddingBottom="@dimen/spacing_xxs" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:layout_gravity="center" android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>