<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar android:id="@id/login_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:progressBarStyleLarge" />
    <ScrollView android:id="@id/login_form" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/user_login_form" android:paddingLeft="24.0dip" android:paddingTop="56.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="94.0dip" android:layout_marginBottom="24.0dip" android:src="@drawable/ic_shopping_cart" />
            <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_s" android:layout_marginBottom="@dimen/spacing_s">
                <EditText android:id="@id/user" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_email" android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_s" android:layout_marginBottom="@dimen/spacing_s">
                <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password" android:maxLines="1" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionUnspecified|normal" android:imeActionLabel="@string/action_sign_in_short" />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton android:textColor="@color/white" android:id="@id/user_sign_in_button" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/action_sign_in_short" style="@style/Widget.AppCompat.Button.Colored" />
            <Button android:layout_gravity="center" android:id="@id/user_register_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/action_register_short" android:color="@color/myPrimaryColor" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>