<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/image" android:background="@color/extra_light_gray" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/image_height_wordpress" android:scaleType="centerCrop" android:adjustViewBounds="true" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/detailstitle" android:paddingTop="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_detail_horizontal_margin" android:layout_marginRight="@dimen/activity_detail_horizontal_margin" android:text="@string/empty_textview" android:fontFamily="sans-serif-condensed" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_detail_horizontal_margin" android:layout_marginRight="@dimen/activity_detail_horizontal_margin">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textview_date" android:fontFamily="sans-serif-thin" />
        <TextView android:id="@id/detailspubdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-thin" />
    </LinearLayout>
    <WebView android:id="@id/descriptionwebview" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_detail_horizontal_margin" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/activity_detail_horizontal_margin" />
    <LinearLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="@color/myAccentColor" android:id="@id/favoritebutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/favorite_button" style="?android:borderlessButtonStyle" />
        <Button android:textColor="@color/myAccentColor" android:id="@id/openbutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_button" style="?android:borderlessButtonStyle" />
        <Button android:textColor="@color/myAccentColor" android:id="@id/mediabutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" style="?android:borderlessButtonStyle" />
    </LinearLayout>
</LinearLayout>