<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/image" android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="@dimen/image_height_youtube" android:scaleType="centerCrop" />
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/image" android:layout_alignParentLeft="true">
        <LinearLayout android:orientation="vertical" android:background="@color/grey_lighter" android:paddingLeft="@dimen/activity_detail_horizontal_margin" android:paddingTop="20.0dip" android:paddingRight="80.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/textsize_xl" android:textColor="@color/grey_dark" android:id="@id/youtubetitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/empty_textview" />
            <TextView android:textColor="@color/dim_gray" android:id="@id/youtubesubtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_textview" />
        </LinearLayout>
        <TextView android:textSize="@dimen/textsize_m" android:autoLink="all" android:linksClickable="true" android:id="@id/youtubedescription" android:paddingLeft="@dimen/activity_detail_horizontal_margin" android:paddingTop="20.0dip" android:paddingRight="@dimen/activity_detail_horizontal_margin" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_textview" android:fontFamily="sans-serif-light" />
        <LinearLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="@color/myAccentColor" android:id="@id/favorite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/favorite_button" style="?android:borderlessButtonStyle" />
            <Button android:textColor="@color/myAccentColor" android:id="@id/comments" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comments" style="?android:borderlessButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton android:id="@id/playbutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:layout_marginBottom="-32.0dip" android:src="@drawable/ic_action_play" android:layout_alignBottom="@id/image" android:layout_alignParentRight="true" android:contentDescription="@string/play_button" app:fabSize="normal" />
</RelativeLayout>