<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.cleveroad.audiovisualization.GLAudioVisualizationView android:id="@id/visualizer_view" android:layout_width="fill_parent" android:layout_height="fill_parent" app:av_backgroundColor="@color/radio_bg_color" app:av_bubblesRandomizeSizes="true" app:av_bubblesSize="50.0dip" app:av_layersCount="3" app:av_wavesColors="@array/radio_colors" app:av_wavesCount="7" app:av_wavesFooterHeight="250.0dip" app:av_wavesHeight="60.0dip" />
    <ImageView android:id="@id/albumArt" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:foreground="@color/black_more_translucent" android:src="@drawable/placeholder_coverart" android:scaleType="centerCrop" />
    <ProgressBar android:id="@id/progressBar" android:layout_width="wrap_content" android:layout_height="80.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="@style/Widget.AppCompat.ProgressBar" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/linearLayout" android:padding="@dimen/spacing_xxl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:animateLayoutChanges="true">
        <TextView android:textSize="@dimen/textsize_xxl" android:textStyle="bold" android:textColor="@color/white" android:id="@id/now_playing_title" android:paddingBottom="@dimen/spacing_s" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/now_playing" android:fontFamily="sans-serif" />
        <TextView android:textSize="@dimen/textsize_m" android:textColor="@color/white" android:gravity="center" android:id="@id/now_playing" android:paddingBottom="@dimen/spacing_xl" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_textview" android:fontFamily="sans-serif-light" />
        <android.support.design.widget.FloatingActionButton android:id="@id/btn_play_pause" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_xxl" app:fabSize="normal" app:srcCompat="@drawable/exomedia_ic_pause_white" />
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@id/already_playing_tooltip" android:background="@drawable/radio_tooltip" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/radio_playing_other" />
    </LinearLayout>
</RelativeLayout>